🐛 Fixed some pages not covering full height of screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 #root {
   max-width: 1280px;
-  min-height: 100%;
+  min-height: 100vh;
   margin: 0 auto;
   text-align: center;
   flex-grow: 1;
